tests/snapshots/guppy__llvmir@planqc_1.snap
---
source: tests/guppy.rs
expression: compile(&mut hugr)
---
; ModuleID = 'hugr-qir'
source_filename = "hugr-qir"

%QUBIT = type opaque
%RESULT = type opaque

@0 = private unnamed_addr constant [37 x i8] c"Expected variant 1 but got variant 0\00", align 1
@prelude.panic_template = private unnamed_addr constant [34 x i8] c"Program panicked (signal %i): %s\0A\00", align 1
@1 = private unnamed_addr constant [47 x i8] c"tket2.rotation.from_halfturns_unchecked failed\00", align 1
@prelude.panic_template.1 = private unnamed_addr constant [34 x i8] c"Program panicked (signal %i): %s\0A\00", align 1
@2 = private unnamed_addr constant [2 x i8] c"1\00", align 1

define void @__hugr__.main.20() #0 {
alloca_block:
  %0 = call %QUBIT* @__quantum__rt__qubit_allocate()
  %1 = insertvalue { i1, %QUBIT* } { i1 true, %QUBIT* poison }, %QUBIT* %0, 1
  %2 = extractvalue { i1, %QUBIT* } %1, 0
  %cond = icmp eq i1 %2, true
  br i1 %cond, label %cond_150_case_1, label %cond_150_case_0

cond_150_case_1:                                  ; preds = %alloca_block
  %3 = extractvalue { i1, %QUBIT* } %1, 1
  br label %cond_exit_150

cond_150_case_0:                                  ; preds = %alloca_block
  %4 = extractvalue { i32, i8* } { i32 1, i8* getelementptr inbounds ([37 x i8], [37 x i8]* @0, i32 0, i32 0) }, 0
  %5 = extractvalue { i32, i8* } { i32 1, i8* getelementptr inbounds ([37 x i8], [37 x i8]* @0, i32 0, i32 0) }, 1
  %6 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([34 x i8], [34 x i8]* @prelude.panic_template, i32 0, i32 0), i32 %4, i8* %5)
  call void @abort()
  br label %cond_exit_150

cond_exit_150:                                    ; preds = %cond_150_case_0, %cond_150_case_1
  %"0.0" = phi %QUBIT* [ null, %cond_150_case_0 ], [ %3, %cond_150_case_1 ]
  call void @__quantum__qis__phasedx__body(double 0x3FF921FB54442D18, double 0xBFF921FB54442D18, %QUBIT* %"0.0")
  call void @__quantum__qis__rz__body(double 0x400921FB54442D18, %QUBIT* %"0.0")
  %7 = fcmp oeq double 1.500000e+00, 0x7FF0000000000000
  %8 = fcmp oeq double 1.500000e+00, 0xFFF0000000000000
  %9 = fcmp uno double 1.500000e+00, 0.000000e+00
  %10 = or i1 %7, %8
  %11 = or i1 %10, %9
  %12 = xor i1 %11, true
  br i1 %12, label %15, label %13

13:                                               ; preds = %cond_exit_150
  %14 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([34 x i8], [34 x i8]* @prelude.panic_template.1, i32 0, i32 0), i32 1, i8* getelementptr inbounds ([47 x i8], [47 x i8]* @1, i32 0, i32 0))
  call void @abort()
  unreachable

15:                                               ; preds = %cond_exit_150
  %16 = fmul double 1.500000e+00, 0x400921FB54442D18
  call void @__quantum__qis__rz__body(double %16, %QUBIT* %"0.0")
  call void @__quantum__qis__phasedx__body(double 0x3FF921FB54442D18, double 0xBFF921FB54442D18, %QUBIT* %"0.0")
  call void @__quantum__qis__rz__body(double 0x400921FB54442D18, %QUBIT* %"0.0")
  %17 = call %RESULT* @__quantum__qis__m__body(%QUBIT* %"0.0")
  %18 = call i1 @__quantum__qis__read_result__body(%RESULT* %17)
  %19 = select i1 %18, i1 true, i1 false
  %20 = select i1 %19, i1 true, i1 false
  call void @__quantum__rt__bool_record_output(i1 %20, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @2, i32 0, i32 0))
  ret void
}

declare %QUBIT* @__quantum__rt__qubit_allocate()

declare i32 @printf(i8*, ...)

declare void @abort()

declare void @__quantum__qis__phasedx__body(double, double, %QUBIT*)

declare void @__quantum__qis__rz__body(double, %QUBIT*)

declare %RESULT* @__quantum__qis__m__body(%QUBIT*)

declare i1 @__quantum__qis__read_result__body(%RESULT*)

declare void @__quantum__rt__bool_record_output(i1, i8*)

attributes #0 = { "entry_point" "output_labeling_schema" "qir_profiles"="custom" "required_num_qubits"="20" "required_num_results"="20" }

!llvm.module.flags = !{!0, !1, !2, !3}

!0 = !{i32 1, !"qir_major_version", i32 1}
!1 = !{i32 7, !"qir_minor_version", i32 0}
!2 = !{i32 1, !"dynamic_qubit_management", i1 false}
!3 = !{i32 1, !"dynamic_result_management", i1 false}
