tests/snapshots/guppy__llvmir@quantum-functions-1.snap
---
source: tests/guppy.rs
expression: compile(&mut hugr)
---
; ModuleID = 'hugr-qir'
source_filename = "hugr-qir"

%QUBIT = type opaque
%RESULT = type opaque

@0 = private unnamed_addr constant [37 x i8] c"Expected variant 1 but got variant 0\00", align 1
@prelude.panic_template = private unnamed_addr constant [34 x i8] c"Program panicked (signal %i): %s\0A\00", align 1
@1 = private unnamed_addr constant [37 x i8] c"Expected variant 1 but got variant 0\00", align 1
@prelude.panic_template.1 = private unnamed_addr constant [34 x i8] c"Program panicked (signal %i): %s\0A\00", align 1
@2 = private unnamed_addr constant [2 x i8] c"1\00", align 1
@3 = private unnamed_addr constant [2 x i8] c"0\00", align 1

define %QUBIT* @__hugr__.fun_func.1(%QUBIT* %0) {
alloca_block:
  call void @__quantum__qis__phasedx__body(double 0x3FF921FB54442D18, double 0xBFF921FB54442D18, %QUBIT* %0)
  call void @__quantum__qis__rz__body(double 0x400921FB54442D18, %QUBIT* %0)
  ret %QUBIT* %0
}

declare void @__quantum__qis__phasedx__body(double, double, %QUBIT*)

declare void @__quantum__qis__rz__body(double, %QUBIT*)

define void @__hugr__.main.12() #0 {
alloca_block:
  %0 = call %QUBIT* @__quantum__rt__qubit_allocate()
  %1 = insertvalue { i1, %QUBIT* } { i1 true, %QUBIT* poison }, %QUBIT* %0, 1
  %2 = call %QUBIT* @__quantum__rt__qubit_allocate()
  %3 = insertvalue { i1, %QUBIT* } { i1 true, %QUBIT* poison }, %QUBIT* %2, 1
  %4 = extractvalue { i1, %QUBIT* } %1, 0
  %cond = icmp eq i1 %4, true
  br i1 %cond, label %cond_58_case_1, label %cond_58_case_0

cond_58_case_1:                                   ; preds = %alloca_block
  %5 = extractvalue { i1, %QUBIT* } %1, 1
  br label %cond_exit_58

cond_58_case_0:                                   ; preds = %alloca_block
  %6 = extractvalue { i32, i8* } { i32 1, i8* getelementptr inbounds ([37 x i8], [37 x i8]* @0, i32 0, i32 0) }, 0
  %7 = extractvalue { i32, i8* } { i32 1, i8* getelementptr inbounds ([37 x i8], [37 x i8]* @0, i32 0, i32 0) }, 1
  %8 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([34 x i8], [34 x i8]* @prelude.panic_template, i32 0, i32 0), i32 %6, i8* %7)
  call void @abort()
  br label %cond_exit_58

cond_exit_58:                                     ; preds = %cond_58_case_1, %cond_58_case_0
  %"0.0" = phi %QUBIT* [ null, %cond_58_case_0 ], [ %5, %cond_58_case_1 ]
  %9 = extractvalue { i1, %QUBIT* } %3, 0
  %cond26 = icmp eq i1 %9, true
  br i1 %cond26, label %cond_47_case_1, label %cond_47_case_0

cond_47_case_1:                                   ; preds = %cond_exit_58
  %10 = extractvalue { i1, %QUBIT* } %3, 1
  br label %cond_exit_47

cond_47_case_0:                                   ; preds = %cond_exit_58
  %11 = extractvalue { i32, i8* } { i32 1, i8* getelementptr inbounds ([37 x i8], [37 x i8]* @1, i32 0, i32 0) }, 0
  %12 = extractvalue { i32, i8* } { i32 1, i8* getelementptr inbounds ([37 x i8], [37 x i8]* @1, i32 0, i32 0) }, 1
  %13 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([34 x i8], [34 x i8]* @prelude.panic_template.1, i32 0, i32 0), i32 %11, i8* %12)
  call void @abort()
  br label %cond_exit_47

cond_exit_47:                                     ; preds = %cond_47_case_1, %cond_47_case_0
  %"09.0" = phi %QUBIT* [ null, %cond_47_case_0 ], [ %10, %cond_47_case_1 ]
  %14 = call %QUBIT* @__hugr__.fun_func.1(%QUBIT* %"0.0")
  %15 = call %RESULT* @__quantum__qis__m__body(%QUBIT* %14)
  %16 = call i1 @__quantum__qis__read_result__body(%RESULT* %15)
  %17 = select i1 %16, i1 true, i1 false
  %18 = call %QUBIT* @__hugr__.fun_func.1(%QUBIT* %"09.0")
  %19 = call %RESULT* @__quantum__qis__m__body(%QUBIT* %18)
  %20 = call i1 @__quantum__qis__read_result__body(%RESULT* %19)
  %21 = select i1 %20, i1 true, i1 false
  %22 = select i1 %17, i1 true, i1 false
  call void @__quantum__rt__bool_record_output(i1 %22, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @2, i32 0, i32 0))
  %23 = select i1 %21, i1 true, i1 false
  call void @__quantum__rt__bool_record_output(i1 %23, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @3, i32 0, i32 0))
  ret void
}

declare %QUBIT* @__quantum__rt__qubit_allocate()

declare i32 @printf(i8*, ...)

declare void @abort()

declare %RESULT* @__quantum__qis__m__body(%QUBIT*)

declare i1 @__quantum__qis__read_result__body(%RESULT*)

declare void @__quantum__rt__bool_record_output(i1, i8*)

attributes #0 = { "entry_point" "output_labeling_schema" "qir_profiles"="custom" "required_num_qubits"="20" "required_num_results"="20" }

!llvm.module.flags = !{!0, !1, !2, !3}

!0 = !{i32 1, !"qir_major_version", i32 1}
!1 = !{i32 7, !"qir_minor_version", i32 0}
!2 = !{i32 1, !"dynamic_qubit_management", i1 false}
!3 = !{i32 1, !"dynamic_result_management", i1 false}
